Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-52058

memcached hangs when no password is passed for encrypted private key

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Morpheus
    • Morpheus, 7.1.0, 7.1.1
    • memcached
    • None
    • Untriaged
    • 1
    • Unknown

    Description

      Seems like memcached hangs when no password is passed in ifconfig command, while it needs a password for encrypted pkey.

      How to reproduce:
      1) Upload encrypted certs, use external script to extract password
      2) Modify the script to return not zero status (add "exit 1")
      3) Restart the server
      4) Ns server tries to push TLS config without password to memcached and memcached gangs

      backtrace:

      [Thread debugging using libthread_db enabled]
      Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
      0x00007fbb6a36b49e in epoll_wait (epfd=6, events=events@entry=0x7fbb69102980, maxevents=32, timeout=timeout@entry=1000) at ../sysdeps/unix/sysv/linux/epoll_wait.c:30
      30	../sysdeps/unix/sysv/linux/epoll_wait.c: No such file or directory.
      (gdb) bt
      #0  0x00007fbb6a36b49e in epoll_wait (epfd=6, events=events@entry=0x7fbb69102980, maxevents=32, timeout=timeout@entry=1000) at ../sysdeps/unix/sysv/linux/epoll_wait.c:30
      #1  0x00007fbb6af4dee5 in epoll_dispatch (base=0x7fbb69142300, tv=<optimized out>)
          at /home/couchbase/jenkins/workspace/cbdeps-platform-build-old/deps/packages/build/libevent/libevent-prefix/src/libevent/epoll.c:465
      #2  0x00007fbb6af44e96 in event_base_loop (base=0x7fbb69142300, flags=1) at /home/couchbase/jenkins/workspace/cbdeps-platform-build-old/deps/packages/build/libevent/libevent-prefix/src/libevent/event.c:1998
      #3  0x0000000000bc5e77 in folly::EventBase::loopBody (this=this@entry=0x7fbb69155500, flags=flags@entry=0, ignoreKeepAlive=ignoreKeepAlive@entry=false)
          at /home/couchbase/jenkins/workspace/cbdeps-platform-build-old/deps/packages/build/folly/folly-prefix/src/folly/folly/io/async/EventBase.cpp:397
      #4  0x0000000000bc6346 in folly::EventBase::loop (this=this@entry=0x7fbb69155500)
          at /home/couchbase/jenkins/workspace/cbdeps-platform-build-old/deps/packages/build/folly/folly-prefix/src/folly/folly/io/async/EventBase.cpp:315
      #5  0x0000000000bc7d06 in folly::EventBase::loopForever (this=0x7fbb69155500)
          at /home/couchbase/jenkins/workspace/cbdeps-platform-build-old/deps/packages/build/folly/folly-prefix/src/folly/folly/io/async/EventBase.cpp:538
      #6  0x0000000000573ce5 in memcached_main (argc=<optimized out>, argv=<optimized out>) at /usr/include/c++/9/bits/unique_ptr.h:360
      #7  0x00007fbb6a2700b3 in __libc_start_main (main=0x542020 <main(int, char**)>, argc=3, argv=0x7ffd2681e8f8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffd2681e8e8)
          at ../csu/libc-start.c:308
      #8  0x000000000056cbbe in _start () at /usr/include/c++/9/bits/std_mutex.h:91
      

      Env:

      # uname -a
      Linux 1eeea4e92045 4.4.0-210-generic #242-Ubuntu SMP Fri Apr 16 09:57:56 UTC 2021 x86_64 x86_64 x86_64 GNU/Linux
      

      Logs: logs.tar.gz

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            timofey.barmin Timofey Barmin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty