MB-52058: Allow for empty password for encrypted cert

If ns_server provided an encrypted cert without a password
to decode it we would try to read the password from stdin.

This patch fix this by returning an empty password (and
fail the password check).

Change-Id: I842d1e6789e7c4c3016d5544d8804ee5a9263a1f
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/174564
Tested-by: Trond Norbye <trond.norbye@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>